# block-ad

./: .gitignore  ANDROID_STATUS.md  API_DESIGN.md  BUILD_ARTIFACTS.md  BUILD_STATUS.md  CI_CD_STATUS.md  CONTRIBUTING.md  DEVELOPMENT_STATUS.md  DOWNLOAD_APK.md  PRIVACY.md  PROJECT_STATUS.md  README.md  STORE_LISTING.md  STORE_LISTING_JP.md  TDD_GUIDE.md  TERMS.md  TEST_SPECIFICATION.md  build_android.sh
.claude/: settings.local.json
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/androidTest/: AndroidManifest.xml
android/app/src/androidTest/java/com/adblock/: ExampleInstrumentedTest.kt  MainActivityUITest.kt  PerformanceTest.kt  VpnServiceInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  adblock_jni.cpp
android/app/src/main/java/com/adblock/: AdBlockApplication.kt  AdBlockEngine.kt  CustomFiltersActivity.kt  MainActivity.kt  Statistics.kt
android/app/src/main/java/com/adblock/analytics/: Analytics.kt  CrashReporter.kt
android/app/src/main/java/com/adblock/debug/: MemoryMonitor.kt
android/app/src/main/java/com/adblock/filter/: CustomRulesManager.kt  FilterListManager.kt
android/app/src/main/java/com/adblock/model/: PerformanceMetrics.kt
android/app/src/main/java/com/adblock/testing/: YouTubeAdTestActivity.kt
android/app/src/main/java/com/adblock/ui/: CustomRulesScreen.kt  DiagnosticsScreen.kt  PerformanceScreen.kt
android/app/src/main/java/com/adblock/ui/theme/: Theme.kt
android/app/src/main/java/com/adblock/vpn/: AdBlockVpnService.kt  VpnError.kt
android/app/src/main/java/com/adblock/worker/: FilterUpdateWorker.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/adblock/: AdBlockEngineTest.kt  MockAdBlockEngine.kt
android/app/src/test/java/com/adblock/vpn/: AdBlockVpnServiceTest.kt
core/: Cargo.toml
core/.cargo/: config.toml
core/benches/: filter_benchmark.rs
core/src/: analytics.rs  backup.rs  crash_reporter.rs  ffi.rs  filter_engine.rs  filter_list.rs  filter_updater.rs  jni.rs  lib.rs  memory_optimization.rs  metrics.rs  network.rs  rules.rs  statistics.rs  utils.rs
core/tests/: ffi_test.rs  filter_engine_test.rs  filter_list_test.rs  filter_updater_test.rs  integration_test.rs  performance_test.rs  statistics_test.rs
core/tests/fixtures/: easylist_sample.txt
docs/: FAQ.md  (+11 more)
(+69 files in other folders)
